--- a/applications/hello-kenzan/index.html
+++ b/applications/hello-kenzan/index.html
@@ -1,6 +1,6 @@
 <p>
 	<h2 style="font-family:sans-serif">
-		Hello from Kenzan! You've successfully built and run the Hello-Kenzan app Toan.
+		Hello from Kenzan! You've successfully built and run the Hello-Kenzan app Toan Pham.
 	</h2>
 </p>
 <p style="font-family:sans-serif">
